<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Vital Eats</string>
    <string name="slogan">Healthy meals, minimal waste</string>
    <string name="access_with">Accede con</string>
    <string name="crearCuenta">Crear cuenta</string>
    <string name="tengoCuenta">YA TENGO UNA CUENTA</string>
    <string name="volver">Volver</string>
    <string name="mail">Email</string>
    <string name="mail_confirm">Email:</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Repite contraseña</string>
    <string name="acceder">ACCEDER</string>
    <string name="google">ACCEDER CON GOOGLE</string>
    <string name="guest">ACCEDER COMO INVITADO</string>
    <string name="olvidado">¿HAS OLVIDADO TU CONTRASEÑA?</string>
    <string name="bienvenido">Bienvenido de nuevo</string>
    <string name="hola">¡HOLA!</string>
    <string name="hola2">Ayudanos a conocer más sobre ti</string>
    <string name="hombre">HOMBRE</string>
    <string name="mujer">MUJER</string>
    <string name="frase">El mail con el que hiciste tu perfil.</string>
    <string name="reset">RESTABLECER CONTRASEÑA</string>
    <string name="siguiente">Siguiente</string>
    <string name="atras">Atrás</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cerrar">CERRAR SESIÓN</string>
    <string name="datos">Información básica sobre Protección de Datos</string>
    <string name="responsable">Responsable</string>
    <string name="responsable2">VITALEATS S.L.</string>
    <string name="finalidad">Finalidad</string>
    <string name="finalidad2">Envío de comunicaciones comerciales.</string>
    <string name="destinatario">Destinatarios</string>
    <string name="destinatario2">Únicamente se cederán datos en caso de obligación legal.</string>
    <string name="info">Información detallada</string>
    <string name="info2">Al pulsar aceptar aceptas nuestros términos y condiciones.</string>
    <string name="dietas">Dietas saludables</string>
    <string name="compra">Lista de la compra semanal</string>
    <string name="acepto">Acepto los términos y condiciones.</string>
    <string name="dieta">Te ayudaremos a controlar el tamaño de tus porciones y asegurarnos de que no comes en exceso y de que no te saltas comidas.</string>
    <string name="dieta2">Limita el consumo de alimentos procesados, azúcar y grasas saturadas. Estos alimentos suelen ser altos en calorías y pobres en nutrientes.</string>
    <string name="compra1">Te ayudamos a realizar una compra semanal basada en tu preferencia de alimentos.</string>
    <string name="compra2">Hacemos recetas saludables con los alimentos de tu lista de la compra o aquellos que tengas en casa, aprovechando al máximo todo.</string>
    <string name="username">Nombre de usuario</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm">Confirmar</string>

    <string name="register_textview">Registro</string>
    <string name="emptyFields">Este campo es obligatorio</string>
    <string name="invalidEmail">Introduce un correo válido</string>
    <string name="loginError">Error al iniciar sesión</string>
    <string name="loginSuccess">Inicio de sesión correcto</string>
    <string name="googleLoginError">Fallo al iniciar sesión con Google</string>
    <string name="googleLoginSuccess">Inicio de sesión con Google correcto</string>
    <string name="userNotFound">Usuario no registrado</string>
    <string name="wrongPassword">Contraseña o email incorrectos</string>
    <string name="sentEmail">Email enviado</string>
    <string name="mailNotFound">El email introducido no está registrado</string>
    <string name="passwordsDoNotMatch">Las contraseñas no coinciden</string>
    <string name="newUserSuccess">Usuario creado con éxito, correo de verificación enviado</string>
    <string name="newUserFail">Error al crear usuario</string>
    <string name="acceptToS">Debes aceptar nuestros términos y condiciones</string>
    <string name="passwordSecurity">La contraseña debe tener al menos 6 caracteres, 1 mayúscula, 1 número y 1 caracter especial</string>
    <string name="error_password_header">La contraseña no cumple los requisitos:</string>
    <string name="error_password_length">6 caracteres</string>
    <string name="error_password_uppercase">1 mayúscula</string>
    <string name="error_password_digit">1 número</string>
    <string name="error_password_special">1 caracter especial</string>
    <string name="password_requirements">Requisitos de contraseña</string>
    <string name="password_length">- Al menos 6 caracteres</string>
    <string name="password_uppercase">- Al menos 1 mayúscula</string>
    <string name="password_number">- Al menos 1 número</string>
    <string name="password_special_char">- Al menos 1 carácter especial</string>
    <string name="optional">(Opcional)</string>
    <string name="confirm_data">Confirma tus datos</string>
    <string name="name">Nombre:</string>
    <string name="age_hint">Edad</string>
    <string name="height_hint">Altura (cm)</string>
    <string name="weight_hint">Peso (kg)</string>
    <string name="age_confirm">Edad:</string>
    <string name="height_confirm">Altura:</string>
    <string name="weight_confirm">Peso:</string>
    <string name="save">GUARDAR DATOS</string>
    <string name="next">Siguiente</string>
    <string name="mailNotVerified">El email no ha sido verificado</string>
    <string name="closedSession">Sesión cerrada</string>
    <string name="scan">SCAN</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="uploadImageSuccess">Imágen cargada con éxito</string>
    <string name="uploadImageError">Error al cargar la imágen</string>
    <string name="addItem">Añadir alimento</string>
    <string name="newItem">Añade un alimento</string>
    <string name="deleteItem">¿Desea borrarlo?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="result">Resultado</string>
    <string name="addRecipe">AÑADIR RECETA</string>
    <string name="searchRecipe">Busca una receta</string>
    <string name="enterFood">Introduzca un alimento</string>
    <string name="defaultStatus">Escribe algo…</string>
    <string name="userData">Datos del usuario guardados</string>
    <string name="userName">Introduce un nombre válido</string>
    <string name="userAge">Introduce una edad válida</string>
    <string name="userWeight">Introduce un peso válido</string>
    <string name="userHeight">Introduce una altura válida</string>
    <string name="fields">Rellena los campos obligatorios</string>

    <string name="user_updated">Foto de perfil actualizada</string>
    <string name="user_not_updated">Error al actualizar perfil</string>

    <!-- Recipe Title -->
    <string name="recipe_title">Título</string>
    <string name="recipe_title_hint">Introduzca el nombre de la receta…</string>

    <!-- Recipe Photo -->
    <string name="recipe_photo">Imágenes</string>
    <string name="select_photo">Seleccionar foto</string>
    <string name="no_image_selected">Ninguna imagen seleccionada</string>
    <string name="upload_picture_error">Error al subir la imagen</string>

    <!-- Ingredients -->
    <string name="ingredients">Ingredientes</string>
    <string name="ingredient_hint">Introduzca los ingredientes…</string>
    <string name="add_ingredient">Añadir</string>

    <!-- Recipe Elaboration -->
    <string name="elaboration">Elaboración</string>
    <string name="elaboration_hint">Introduzca la elaboración de la receta…</string>

    <!-- Time and Number of People -->
    <string name="time">Tiempo</string>
    <string name="time_value">min</string>
    <string name="num_people">Para</string>
    <string name="num_person_value">persona</string>
    <string name="num_people_value">personas</string>

    <!-- Recipe Type -->
    <string name="recipe_type">Tipo</string>
    <string-array name="recipe_types">
        <item>-</item>
        <item>Comida Vegetariana</item>
        <item>Comida Rápida</item>
        <item>Postres</item>
        <item>Platos Principales</item>
        <item>Comida Saludable</item>
        <item>Comida para Diabéticos</item>
    </string-array>

    <!-- Recipe Tags -->
    <string name="recipe_tags">Etiquetas</string>
    <string name="high_protein">Alta en Proteínas</string>
    <string name="low_fat">Baja en Grasas</string>
    <string name="gluten_free">Sin Gluten</string>
    <string name="lactose_free">Sin Lactosa</string>

    <string name="create_recipe">Crear receta</string>
    <string name="private_recipe_toggle">Receta privada</string>
    <string name="create_recipe_progress">Creando receta…</string>
    <string name="create_recipe_error_emptyfields">Rellena todos los campos</string>

    <string name="update_status">Aqui puedes actualizar tu estado…</string>
    <string name="status_save">Guardar</string>

    <string name="keywords_searchbar">Introduce hasta 3 palabras clave…</string>

    <string name="created_by">Creada por:</string>

    <!-- Bottom menu strings -->
    <string name="bottom_menu_home">Inicio</string>
    <string name="bottom_menu_grocery">Lista compra</string>
    <string name="bottom_menu_searchbar">Recetas</string>
    <string name="bottom_menu_profile">Perfil</string>

    <!-- Profile -->
    <string name="profile_recipe_count">Tus recetas:</string>
    <string name="profile_creation_time">Miembro desde:</string>

    <!-- Gestión de votos -->
    <string name="already_voted">Ya has votado esta receta</string>
    <string name="vote_confirm">¿Quieres valorar la receta con %f estrellas?</string>
    <string name="vote_retrieve_error">Error al consultar votos</string>
    <string name="voted_correctly">Voto registrado correctamente</string>
    <string name="vote_add_error">Error al registrar voto</string>

    <!-- Creación de recetas -->
    <string name="new_recipe_created">Nueva receta creada!</string>
    <string name="new_recipe_error">Error al crear receta!</string>
    <string name="new_recipe_image_error">Error al crear receta (error de imagenes)</string>

    <!-- Perfil -->
    <string name="icm_fill_all">Rellena peso y altura</string>

    <!-- Signout -->
    <string name="sign_out">Cerrar sesión</string>
    <string name="sign_out_confirm">¿Está seguro que desea cerrar sesión?</string>


</resources>